--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -15,7 +15,6 @@
         android:ems="10"
         android:fontFamily="@font/segoeui"
         android:inputType="textPersonName"
-        android:text="John Michael"
         android:textColor="@color/white"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -97,7 +96,6 @@
         android:ems="10"
         android:fontFamily="@font/segoeui"
         android:inputType="textPersonName"
-        android:text="K32"
         android:textColor="@color/white"
         android:textSize="60sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -134,7 +132,6 @@
         android:ems="10"
         android:fontFamily="@font/segoeui"
         android:inputType="textPersonName"
-        android:text="Librero"
         android:textColor="@color/white"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -149,7 +146,6 @@
         android:ems="10"
         android:fontFamily="@font/segoeui"
         android:inputType="textPersonName"
-        android:text="0000"
         android:textColor="@color/white"
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="@+id/tv_system_name7"
@@ -221,7 +217,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/segoeui"
-        android:text="John Michael Librero- K32"
         android:textAlignment="viewStart"
         android:textColor="@color/white"
         android:textSize="16sp"
@@ -236,7 +231,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/segoeui"
-        android:text="Viewer Registered"
         android:textAlignment="viewStart"
         android:textColor="@color/white"
         android:textSize="16sp"
@@ -313,5 +307,17 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_refresh" />
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:progressTint="@color/purple_500"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/tv_statusDetails"
+        app:layout_constraintVertical_bias="0.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
